--- a/client/scss/_Orientation.scss
+++ b/client/scss/_Orientation.scss
@@ -1,7 +1,10 @@
 .invalid-orientation {
   width: 100%;
   height: 100%;
+  position: fixed;
   display: flex;
+  top: 0;
+  background-color: $base-4;
   justify-content: center;
   align-items: center;
 }
